:heavy_check_mark: Сборка #2

--- a/2/catalog.html
+++ b/2/catalog.html
@@ -3,12 +3,13 @@
 <head>
   <meta charset="utf-8">
   <title>Фото и видео</title>
+  <link rel="stylesheet" href="css/style.css">
   <base href="https://htmlacademy-adaptive.github.io/35554-sedona-26/2/">
 </head>
 <body class="page__body">
 <header class="main-header">
   <a class="main-header__logo" href="#">
-    <img class="main-header__logo-image" src="/source/img/logo.svg" alt="Город Седона" width="185" height="96">
+    <img class="main-header__logo-image" src="img/logo.svg" alt="Город Седона" width="185" height="96">
   </a>
   <nav class="main-navigation">
     <button class="main-navigation__toggle" type="button">
@@ -36,51 +37,49 @@
 <main class="main-container">
   <h1 class="visually-hidden">Фото и видео города Седона</h1>
   <section class="intro">
-    <div class="intro-wrapper">
+    <div class="intro__wrapper">
       <h2 class="visually-hidden">Седона</h2>
-      <img class="intro__logo" src="/source/img/logo-catalog.svg" width="229" height="39" alt="Добро пожаловать в Седону.">
+      <img class="intro__logo" src="img/logo-catalog.svg" width="229" height="39" alt="Добро пожаловать в Седону.">
     </div>
   </section>
 
   <section class="content">
     <div class="content__wrapper">
       <h2 class="content__title">Фото и видео</h2>
-      <p class="content__description">Не можете решиться на путешествие из-за курса? Фотографии помогут вам забыть о
-        политике и экономике.</p>
-
+      <p class="content__description">Не можете решиться на путешествие из-за курса? Фотографии помогут вам забыть о политике и экономике.</p>
       <ul class="content__list gallery">
         <li class="gallery__item">
-          <img class="gallery__image" src="" alt="">
-          <h3 class="gallery__title">неродные просторы</h3>
-          <span class="gallery__author">Автор фото: <cite>Борис</cite></span>
-          <a class="gallery__likes" href="#">
-            <span class="visually-hidden">Количество лайков</span>
+          <a class="galerry__link" href="#">
+            <img class="gallery__image" src="./img/catalog/photo-1-mobile.jpg" width="280" height="280" alt="дорога среди равнин">
+            <h3 class="gallery__title">Неродные просторы</h3>
+            <p class="gallery__author">автор фото: <cite>борис</cite></p>
+            <span class="visually-hidden">количество лайков</span>
             <span class="gallery__number-likes">1350</span>
           </a>
         </li>
         <li class="gallery__item">
-          <img class="gallery__image" src="" alt="">
-          <h3 class="gallery__title">Местная растительность</h3>
-          <span class="gallery__author">Автор фото: <cite>Сергей</cite></span>
-          <a class="gallery__likes" href="#">
+          <a class="gallery__link" href="#">
+            <img class="gallery__image" src="./img/catalog/photo-2-mobile.jpg" width="280" height="280" alt="Местные растения">
+            <h3 class="gallery__title">Местная растительность</h3>
+            <p class="gallery__author">Автор фото: <cite>Сергей</cite></p>
             <span class="visually-hidden">Количество лайков</span>
             <span class="gallery__number-likes">146</span>
           </a>
         </li>
         <li class="gallery__item">
-          <img class="gallery__image" src="" alt="">
-          <h3 class="gallery__title">Дорога на север</h3>
-          <span class="gallery__author">Автор фото: <cite>Петр</cite></span>
-          <a class="gallery__likes" href="#">
+          <a class="gallery__link" href="#">
+            <img class="gallery__image" src="./img/catalog/photo-3-mobile.jpg" width="280" height="280" alt="Горный серпантин">
+            <h3 class="gallery__title">Дорога на север</h3>
+            <p class="gallery__author">Автор фото: <cite>Петр</cite></p>
             <span class="visually-hidden">Количество лайков</span>
             <span class="gallery__number-likes">96</span>
           </a>
         </li>
         <li class="gallery__item">
-          <img class="gallery__image" src="" alt="">
-          <h3 class="gallery__title">Мост дьявола</h3>
-          <span class="gallery__author">Автор фото: <cite>Антон</cite></span>
-          <a class="gallery__likes" href="#">
+          <a class="gallery__link" href="#">
+            <img class="gallery__image" src="./img/catalog/photo-4-mobile.jpg" width="280" height="280" alt="Мост дьявола">
+            <h3 class="gallery__title">Мост дьявола</h3>
+            <p class="gallery__author">Автор фото: <cite>Антон</cite></p>
             <span class="visually-hidden">Количество лайков</span>
             <span class="gallery__number-likes">254</span>
           </a>
@@ -93,7 +92,10 @@
     <div class="video__wrapper">
       <h2 class="video__title">Все еще сомневаетесь?</h2>
       <p class="video__description">Смотрите видеопрезентацию и скорее за билетами, пока они не подорожали в очередной раз!</p>
-      <video class="video__content" src=""></video>
+      <img class="video__content-image" src="./img/catalog/video-mobile.jpg" width="280" height="177" alt="Видеопрезентация о Седоне">
+      <button class="video__button" type="button">
+        <span class="visually-hidden">Включить видео</span>
+      </button>
     </div>
   </section>
 
@@ -101,10 +103,9 @@
 
 <footer class="main-footer">
   <div class="main-footer__wrapper">
-    <div class="main-footer__hashtag hashtag">
-      <a class="hashtag__link" href="#">#visitsedona</a>
-    </div>
-    <div class="main-footer__social social">
+    <a class="main-footer__hashtag-link" href="#">#visitsedona</a>
+    <section class="main-footer__social social">
+      <h2 class="visually-hidden">Социальные сети</h2>
       <ul class="social__list">
         <li class="social__item">
           <a class="social__link social__link--vkontakte" href="https://vk.com/htmlacademy">
@@ -122,15 +123,14 @@
           </a>
         </li>
       </ul>
-    </div>
-    <div class="main-footer__copyright copyright">
+    </section>
+    <p class="main-footer__copyright copyright">
       <b class="copyright__text">Разработано:</b>
       <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
         <span class="visually-hidden">HTML Academy</span>
       </a>
-    </div>
+    </p>
   </div>
 </footer>
-
 </body>
 </html>
