--- a/2/form.html
+++ b/2/form.html
@@ -3,12 +3,13 @@
 <head>
   <meta charset="utf-8">
   <title>Форма отзыва</title>
+  <link rel="stylesheet" href="css/style.css">
   <base href="https://htmlacademy-adaptive.github.io/35554-sedona-26/2/">
 </head>
 <body class="page__body">
 <header class="main-header">
   <a class="main-header__logo" href="#">
-    <img class="main-header__logo-image" src="/source/img/logo.svg" alt="Город Седона" width="185" height="96">
+    <img class="main-header__logo-image" src="./img/logo.svg" alt="Город Седона" width="185" height="96">
   </a>
   <nav class="main-navigation">
     <button class="main-navigation__toggle" type="button">
@@ -36,9 +37,9 @@
 <main class="main-container">
   <h1 class="visually-hidden">Форма отзыва</h1>
   <section class="intro">
-    <div class="intro-wrapper">
+    <div class="intro__wrapper">
       <h2 class="visually-hidden">Седона</h2>
-      <img class="intro__logo" src="/source/img/logo-catalog.svg" width="229" height="39" alt="Добро пожаловать в Седону.">
+      <img class="intro__logo" src="./img/logo-catalog.svg" width="229" height="39" alt="Добро пожаловать в Седону.">
     </div>
   </section>
 
@@ -48,98 +49,98 @@
       <p class="reviews__description">Помогите нашим отелям стать лучше! оставьте отзыв о них, а также о посещенных вами достопримечательностях</p>
 
       <form class="reviews__form" action="https://echo.htmlacademy.ru/" method="post">
-        <fieldset class="reviews__field-group introduce-group">
-          <legend class="introduce-group__title">Представьтесь:</legend>
-          <div class="introduce-group__name">
-            <label for="name" class="introduce-group__form-label">Имя<sup>*</sup>:</label>
-            <input class="introduce-group__form-input" type="text" name="name" id="name" value="Пётр" required>
+        <fieldset class="reviews__field-group field-group">
+          <legend class="field-group__title">Представьтесь:</legend>
+          <div class="field-group__name">
+            <label for="name" class="field-group__form-label">Имя<sup>*</sup>:</label>
+            <input class="field-group__form-input" type="text" name="name" id="name" value="Пётр" required>
           </div>
-          <div class="introduce-group__surname">
-            <label for="surname" class="introduce-group__form-label">Фамилия<sup>*</sup>:</label>
-            <input class="introduce-group__form-input" type="text" name="surname" id="surname" value="Пустота" required>
+          <div class="field-group__surname">
+            <label for="surname" class="field-group__form-label">Фамилия<sup>*</sup>:</label>
+            <input class="field-group__form-input" type="text" name="surname" id="surname" value="Пустота" required>
           </div>
-          <div class="introduce-group__patronymic">
-            <label for="patronymic" class="introduce-group__form-label">Отчество:</label>
-            <input class="introduce-group__form-input" type="text" name="patronymic" id="patronymic" value="Викторович">
-          </div>
-        </fieldset>
-
-        <fieldset class="reviews__field-group contact-group">
-          <legend class="contact-group__title">Контактная информация:</legend>
-          <div class="contact-group__phone">
-            <label for="phone" class="contact-group__form-label">Контактный телефон<sup>*</sup>:</label>
-            <input class="contact-group__form-input" type="text" name="phone" id="phone" placeholder="Введите телефон" required>
-          </div>
-          <div class="contact-group__email">
-            <label for="email" class="contact-group__form-label">Электронная почта<sup>*</sup>:</label>
-            <input class="contact-group__form-input" type="email" name="email" id="email" placeholder="Введите e-mail" required>
+          <div class="field-group__patronymic">
+            <label for="patronymic" class="field-group__form-label">Отчество:</label>
+            <input class="field-group__form-input" type="text" name="patronymic" id="patronymic" value="Викторович">
           </div>
         </fieldset>
 
-        <fieldset class="reviews__field-group impression-group">
-          <legend class="impression-group__title">Ваше общее впечатление:</legend>
-          <ul class="impression-group__list">
-            <li class="impression-group__item">
-              <label class="impression-group__form-label">
-                <input class="impression-group__form-input visually-hidden" type="radio" name="positive" checked>
-                <span class="impression-group__control-mark impression-group__control-mark--radio"></span>
+        <fieldset class="reviews__field-group field-group">
+          <legend class="field-group__title">Контактная информация:</legend>
+          <div class="field-group__phone">
+            <label for="phone" class="field-group__form-label">Контактный телефон<sup>*</sup>:</label>
+            <input class="field-group__form-input" type="tel" name="phone" id="phone" placeholder="Введите телефон" required>
+          </div>
+          <div class="field-group__email">
+            <label for="email" class="field-group__form-label">Электронная почта<sup>*</sup>:</label>
+            <input class="field-group__form-input" type="email" name="email" id="email" placeholder="Введите e-mail" required>
+          </div>
+        </fieldset>
+
+        <fieldset class="reviews__field-group field-group">
+          <legend class="field-group__title">Ваше общее впечатление:</legend>
+          <ul class="field-group__list">
+            <li class="field-group__item">
+              <label class="field-group__form-label">
+                <input class="field-group__form-input visually-hidden" type="radio" name="impression" checked>
+                <span class="field-group__control-mark field-group__control-mark--radio"></span>
                 Скорее положительное
               </label>
             </li>
-            <li class="impression-group__item">
-              <label class="impression-group__form-label">
-                <input class="impression-group__form-input visually-hidden" type="radio" name="negative">
-                <span class="impression-group__control-mark impression-group__control-mark--radio"></span>
+            <li class="field-group__item">
+              <label class="field-group__form-label">
+                <input class="field-group__form-input visually-hidden" type="radio" name="impression">
+                <span class="field-group__control-mark field-group__control-mark--radio"></span>
                 Скорее отрицательное
               </label>
             </li>
-            <li class="impression-group__item">
-              <label class="impression-group__form-label">
-                <input class="impression-group__form-input visually-hidden" type="radio" name="unknown">
-                <span class="impression-group__control-mark impression-group__control-mark--radio"></span>
+            <li class="field-group__item">
+              <label class="field-group__form-label">
+                <input class="field-group__form-input visually-hidden" type="radio" name="impression">
+                <span class="field-group__control-mark field-group__control-mark--radio"></span>
                 Затрудняюсь ответить
               </label>
             </li>
           </ul>
         </fieldset>
 
-        <fieldset class="reviews__field-group sightseeing-group">
-          <legend class="sightseeing-group__title">Посещенные достопримечательности:</legend>
-          <ul class="sightseeing-group__list">
-            <li class="sightseeing-group__item">
-              <label class="sightseeing-group__form-label">
-                <input class="sightseeing-group__form-input visually-hidden" type="checkbox" name="bridge" checked>
-                <span class="sightseeing-group__control-mark"></span>
+        <fieldset class="reviews__field-group field-group">
+          <legend class="field-group__title">Посещенные достопримечательности:</legend>
+          <ul class="field-group__list">
+            <li class="field-group__item">
+              <label class="field-group__form-label">
+                <input class="field-group__form-input visually-hidden" type="checkbox" name="bridge" checked>
+                <span class="field-group__control-mark"></span>
                 Мост Дьявола
               </label>
             </li>
-            <li class="sightseeing-group__item">
-              <label class="sightseeing-group__form-label">
-                <input class="sightseeing-group__form-input visually-hidden" type="checkbox" name="mount" checked>
-                <span class="sightseeing-group__control-mark"></span>
+            <li class="field-group__item">
+              <label class="field-group__form-label">
+                <input class="field-group__form-input visually-hidden" type="checkbox" name="mount" checked>
+                <span class="field-group__control-mark"></span>
                 Гора-Колокол
               </label>
             </li>
-            <li class="sightseeing-group__item">
-              <label class="sightseeing-group__form-label">
-                <input class="sightseeing-group__form-input visually-hidden" type="checkbox" name="park" checked>
-                <span class="sightseeing-group__control-mark"></span>
+            <li class="field-group__item">
+              <label class="field-group__form-label">
+                <input class="field-group__form-input visually-hidden" type="checkbox" name="park" checked>
+                <span class="field-group__control-mark"></span>
                 Слайд-парк
               </label>
             </li>
-            <li class="sightseeing-group__item">
-              <label class="sightseeing-group__form-label">
-                <input class="sightseeing-group__form-input visually-hidden" type="checkbox" name="rocks">
-                <span class="sightseeing-group__control-mark"></span>
+            <li class="field-group__item">
+              <label class="field-group__form-label">
+                <input class="field-group__form-input visually-hidden" type="checkbox" name="rocks">
+                <span class="field-group__control-mark"></span>
                 Красные скалы
               </label>
             </li>
           </ul>
         </fieldset>
 
-        <div class="reviews__field-group review-group">
-          <label for="review" class="review-group__form-label">Опишите свои эмоции:</label>
-          <textarea class="review-group__form-input" name="review" id="review" placeholder="Опишите подробно все свои восторги">
+        <div class="reviews__field-group field-group">
+          <label for="review-text" class="field-group__form-label">Опишите свои эмоции:</label>
+          <textarea class="field-group__form-input" name="review-text" id="review-text" placeholder="Опишите подробно все свои восторги">
           </textarea>
         </div>
 
@@ -152,15 +153,13 @@
       </form>
     </div>
   </section>
-
 </main>
 
 <footer class="main-footer">
   <div class="main-footer__wrapper">
-    <div class="main-footer__hashtag hashtag">
-      <a class="hashtag__link" href="#">#visitsedona</a>
-    </div>
-    <div class="main-footer__social social">
+    <a class="main-footer__hashtag-link" href="#">#visitsedona</a>
+    <section class="main-footer__social social">
+      <h2 class="visually-hidden">Социальные сети</h2>
       <ul class="social__list">
         <li class="social__item">
           <a class="social__link social__link--vkontakte" href="https://vk.com/htmlacademy">
@@ -178,13 +177,13 @@
           </a>
         </li>
       </ul>
-    </div>
-    <div class="main-footer__copyright copyright">
+    </section>
+    <p class="main-footer__copyright copyright">
       <b class="copyright__text">Разработано:</b>
       <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
         <span class="visually-hidden">HTML Academy</span>
       </a>
-    </div>
+    </p>
   </div>
 </footer>
 
@@ -192,7 +191,7 @@
   <div class="modal-error__wrapper">
     <h2 class="modal-error__title">Что-то пошло не так!</h2>
     <p class="modal-error__description">Проверьте поля, выделенные красным, скорее всего вы забыли их заполнить</p>
-    <button class="modal-error__button button">Ok</button>
+    <button class="modal-error__button button" type="button">Ok</button>
   </div>
 </div>
 
@@ -200,7 +199,7 @@
   <div class="modal-correct__wrapper">
     <h2 class="modal-correct__title">Ваш отзыв отправлен!</h2>
     <p class="modal-correct__description">Спасибо за ваше участие, ваш отзыв уже поступил к нам. В ближайшее время мы опубликуем его на сайте.</p>
-    <button class="modal-correct__button button">Закрыть окно</button>
+    <button class="modal-correct__button button" type="button">Закрыть окно</button>
   </div>
 </div>
 
