--- a/source/index.html
+++ b/source/index.html
@@ -51,41 +51,41 @@
       <h2 class="visually-hidden">Преимущества</h2>
       <ul class="advantages__list">
         <li class="advantages__item advantages__item--accent">
-          <h3 class="advantages__title advantages__title--accent">Настоящий городок</h3>
+          <h3 class="advantages__title heading advantages__title--accent">Настоящий городок</h3>
           <span class="advantages__number">— №1 —</span>
           <p class="advantages__description">Седона не аттракцион для туристов, там течет своя жизнь</p>
           <img class="advantages__image" src="./img/photo-city-mobile.jpg" width="320" height="260" alt="Город Седона">
         </li>
         <li class="advantages__item advantages__item--house">
-          <h3 class="advantages__title">Жилье</h3>
+          <h3 class="advantages__title heading">Жилье</h3>
           <p class="advantages__description">Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
         </li>
         <li class="advantages__item advantages__item--food">
-          <h3 class="advantages__title">Еда</h3>
+          <h3 class="advantages__title heading">Еда</h3>
           <p class="advantages__description">Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
         </li>
         <li class="advantages__item advantages__item--souvenirs">
-          <h3 class="advantages__title">Сувениры</h3>
+          <h3 class="advantages__title heading">Сувениры</h3>
           <p class="advantages__description">Не только китайского, но и местного производства!</p>
         </li>
         <li class="advantages__item advantages__item--accent">
-          <h3 class="advantages__title advantages__title--accent">Там есть Мост дьявола</h3>
+          <h3 class="advantages__title heading advantages__title--accent">Там есть Мост дьявола</h3>
           <span class="advantages__number">— №2 —</span>
           <p class="advantages__description">Да, по нему можно пройти! Если вы осмелитесь, конечно</p>
           <img class="advantages__image" src="./img/photo-bridge-mobile.jpg" width="320" height="260" alt="Мост дьявола">
         </li>
         <li class="advantages__item">
-          <h3 class="advantages__title">Небольшая площадь</h3>
+          <h3 class="advantages__title heading">Небольшая площадь</h3>
           <span class="advantages__number">— №3 —</span>
           <p class="advantages__description">Все интересные места находятся очень близко</p>
         </li>
         <li class="advantages__item">
-          <h3 class="advantages__title">Красивая дорога</h3>
+          <h3 class="advantages__title heading">Красивая дорога</h3>
           <span class="advantages__number">— №4 —</span>
           <p class="advantages__description">Ехать в Седону из Лас-вегаса совсем не скучно!</p>
         </li>
         <li class="advantages__item">
-          <h3 class="advantages__title">Мало туристов</h3>
+          <h3 class="advantages__title heading">Мало туристов</h3>
           <span class="advantages__number">— №5 —</span>
           <p class="advantages__description">Большинство едет в гранд каньон и толпится там</p>
         </li>
