--- a/source/index.html
+++ b/source/index.html
@@ -56,17 +56,21 @@
           <p class="advantages__description">Седона не аттракцион для туристов, там течет своя жизнь</p>
           <img class="advantages__image" src="./img/photo-city-mobile.jpg" width="320" height="260" alt="Город Седона">
         </li>
-        <li class="advantages__item advantages__item--house">
-          <h3 class="advantages__title heading">Жилье</h3>
-          <p class="advantages__description">Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
-        </li>
-        <li class="advantages__item advantages__item--food">
-          <h3 class="advantages__title heading">Еда</h3>
-          <p class="advantages__description">Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
-        </li>
-        <li class="advantages__item advantages__item--souvenirs">
-          <h3 class="advantages__title heading">Сувениры</h3>
-          <p class="advantages__description">Не только китайского, но и местного производства!</p>
+        <li class="advantages__item advantages__item--qualities">
+          <ul class="advantages__list-qualities">
+            <li class="advantages__item advantages__item--quality advantages__item--house">
+              <h3 class="advantages__title heading">Жилье</h3>
+              <p class="advantages__description">Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
+            </li>
+            <li class="advantages__item advantages__item--quality advantages__item--food">
+              <h3 class="advantages__title heading">Еда</h3>
+              <p class="advantages__description">Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
+            </li>
+            <li class="advantages__item advantages__item--quality advantages__item--souvenirs">
+              <h3 class="advantages__title heading">Сувениры</h3>
+              <p class="advantages__description">Не только китайского, но и местного производства!</p>
+            </li>
+          </ul>
         </li>
         <li class="advantages__item advantages__item--accent">
           <h3 class="advantages__title heading advantages__title--accent">Там есть Мост дьявола</h3>
